--- a/project/menu_cms/templates/menu_cms/menu.html
+++ b/project/menu_cms/templates/menu_cms/menu.html
@@ -1,3 +1,4 @@
+{% load menu_cms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,6 @@
     <title>{{ menu }}</title>
 </head>
 <body>
-
+{% draw_menu '' %}
 </body>
 </html>
