--- a/project/menu_cms/templates/menu_cms/menu.html
+++ b/project/menu_cms/templates/menu_cms/menu.html
@@ -3,9 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ menu }}</title>
+    <title>Menu CMS</title>
 </head>
 <body>
+<h1>{{ link }}</h1>
 {% draw_menu 'main_menu' %}
 </body>
 </html>
